test/semantic/good/jeffrey-test-weird3.mC
int foo(int a){
return a+7;
}

int main(){
int a;
a=foo(foo(foo(foo(foo(foo(foo(foo(8))))))));
return 0;
}
